--- a/dashboard-board/dashboard-board.ioc
+++ b/dashboard-board/dashboard-board.ioc
@@ -24,10 +24,12 @@ Mcu.IP7=SYS_M4
 Mcu.IPNb=8
 Mcu.Name=STM32H745XIHx
 Mcu.Package=TFBGA240
-Mcu.Pin0=VP_SYS_VS_Systick
-Mcu.Pin1=VP_SYS_M4_VS_Systick
-Mcu.Pin2=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=3
+Mcu.Pin0=PH1-OSC_OUT (PH1)
+Mcu.Pin1=PH0-OSC_IN (PH0)
+Mcu.Pin2=VP_SYS_VS_Systick
+Mcu.Pin3=VP_SYS_M4_VS_Systick
+Mcu.Pin4=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745XIHx
@@ -55,6 +57,14 @@ NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PH0-OSC_IN\ (PH0).GPIOParameters=PinAttribute
+PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
+PH0-OSC_IN\ (PH0).PinAttribute=Free
+PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
+PH1-OSC_OUT\ (PH1).GPIOParameters=PinAttribute
+PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
+PH1-OSC_OUT\ (PH1).PinAttribute=Free
+PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -88,84 +98,90 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_ETH_Init-ETH-false-HAL-true-CortexM4,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true-CortexM4,4-MX_FDCAN2_Init-FDCAN2-false-HAL-true-CortexM4,5-MX_FMC_Init-FMC-false-HAL-true-CortexM4,6-MX_LTDC_Init-LTDC-false-HAL-true-CortexM4,7-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM4,8-MX_SAI2_Init-SAI2-false-HAL-true-CortexM4,9-MX_SDMMC1_MMC_Init-SDMMC1-false-HAL-true-CortexM4,10-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM4,11-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=50390625
-RCC.AHB12Freq_Value=64000000
-RCC.AHB4Freq_Value=64000000
-RCC.APB1Freq_Value=64000000
-RCC.APB2Freq_Value=64000000
-RCC.APB3Freq_Value=64000000
-RCC.APB4Freq_Value=64000000
-RCC.AXIClockFreq_Value=64000000
+RCC.AHB12Freq_Value=200000000
+RCC.AHB4Freq_Value=200000000
+RCC.APB1Freq_Value=100000000
+RCC.APB2Freq_Value=100000000
+RCC.APB3Freq_Value=100000000
+RCC.APB4Freq_Value=100000000
+RCC.AXIClockFreq_Value=200000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CPU2Freq_Value=64000000
-RCC.CPU2SystikFreq_Value=64000000
-RCC.CortexFreq_Value=64000000
-RCC.CpuClockFreq_Value=64000000
-RCC.D1CPREFreq_Value=64000000
-RCC.DFSDMACLkFreq_Value=48097826.086956516
-RCC.DFSDMFreq_Value=64000000
-RCC.DIVM1=23
-RCC.DIVN1=177
+RCC.CPU2Freq_Value=200000000
+RCC.CPU2SystikFreq_Value=200000000
+RCC.CortexFreq_Value=400000000
+RCC.CpuClockFreq_Value=400000000
+RCC.D1CPREFreq_Value=400000000
+RCC.D1PPRE=RCC_APB3_DIV2
+RCC.D2PPRE1=RCC_APB1_DIV2
+RCC.D2PPRE2=RCC_APB2_DIV2
+RCC.D3PPRE=RCC_APB4_DIV2
+RCC.DFSDMACLkFreq_Value=200000000
+RCC.DFSDMFreq_Value=100000000
+RCC.DIVM1=2
+RCC.DIVN1=64
 RCC.DIVN3=192
-RCC.DIVP1Freq_Value=96195652.17391303
+RCC.DIVP1Freq_Value=400000000
 RCC.DIVP2Freq_Value=50390625
 RCC.DIVP3Freq_Value=75000000
 RCC.DIVQ1=4
-RCC.DIVQ1Freq_Value=48097826.086956516
+RCC.DIVQ1Freq_Value=200000000
 RCC.DIVQ2Freq_Value=50390625
 RCC.DIVQ3Freq_Value=75000000
 RCC.DIVR1=4
-RCC.DIVR1Freq_Value=48097826.086956516
+RCC.DIVR1Freq_Value=200000000
 RCC.DIVR2Freq_Value=50390625
 RCC.DIVR3Freq_Value=75000000
-RCC.FDCANFreq_Value=48097826.086956516
-RCC.FMCFreq_Value=64000000
+RCC.FDCANFreq_Value=200000000
+RCC.FMCFreq_Value=200000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=64000000
-RCC.HCLKFreq_Value=64000000
-RCC.HRTIMFreq_Value=64000000
-RCC.I2C123Freq_Value=64000000
-RCC.I2C4Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=64000000
-RCC.LPTIM2Freq_Value=64000000
-RCC.LPTIM345Freq_Value=64000000
-RCC.LPUART1Freq_Value=64000000
+RCC.HCLK3ClockFreq_Value=200000000
+RCC.HCLKFreq_Value=200000000
+RCC.HPRE=RCC_HCLK_DIV2
+RCC.HRTIMFreq_Value=200000000
+RCC.I2C123Freq_Value=100000000
+RCC.I2C4Freq_Value=100000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=100000000
+RCC.LPTIM2Freq_Value=100000000
+RCC.LPTIM345Freq_Value=100000000
+RCC.LPUART1Freq_Value=100000000
 RCC.LTDCFreq_Value=75000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=64000000
+RCC.MCO2PinFreq_Value=400000000
 RCC.PLL2FRACN=0
 RCC.PLL3FRACN=0
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE2
-RCC.QSPIFreq_Value=64000000
+RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE0
+RCC.QSPIFreq_Value=200000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=48097826.086956516
-RCC.SAI23Freq_Value=48097826.086956516
-RCC.SAI4AFreq_Value=48097826.086956516
-RCC.SAI4BFreq_Value=48097826.086956516
-RCC.SDMMCFreq_Value=48097826.086956516
-RCC.SPDIFRXFreq_Value=48097826.086956516
-RCC.SPI123Freq_Value=48097826.086956516
-RCC.SPI45Freq_Value=64000000
-RCC.SPI6Freq_Value=64000000
-RCC.SWPMI1Freq_Value=64000000
-RCC.SYSCLKFreq_VALUE=64000000
-RCC.SupplySource=PWR_DIRECT_SMPS_SUPPLY
-RCC.Tim1OutputFreq_Value=64000000
-RCC.Tim2OutputFreq_Value=64000000
+RCC.SAI1Freq_Value=200000000
+RCC.SAI23Freq_Value=200000000
+RCC.SAI4AFreq_Value=200000000
+RCC.SAI4BFreq_Value=200000000
+RCC.SDMMCFreq_Value=200000000
+RCC.SPDIFRXFreq_Value=200000000
+RCC.SPI123Freq_Value=200000000
+RCC.SPI45Freq_Value=100000000
+RCC.SPI6Freq_Value=100000000
+RCC.SWPMI1Freq_Value=100000000
+RCC.SYSCLKFreq_VALUE=400000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.SupplySource=PWR_SMPS_1V8_SUPPLIES_EXT
+RCC.Tim1OutputFreq_Value=200000000
+RCC.Tim2OutputFreq_Value=200000000
 RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=64000000
-RCC.USART234578Freq_Value=64000000
-RCC.USBFreq_Value=48097826.086956516
-RCC.VCO1OutputFreq_Value=192391304.34782606
+RCC.USART16Freq_Value=100000000
+RCC.USART234578Freq_Value=100000000
+RCC.USBFreq_Value=200000000
+RCC.VCO1OutputFreq_Value=800000000
 RCC.VCO2OutputFreq_Value=100781250
 RCC.VCO3OutputFreq_Value=150000000
-RCC.VCOInput1Freq_Value=1086956.5217391304
+RCC.VCOInput1Freq_Value=12500000
 RCC.VCOInput2Freq_Value=781250
 RCC.VCOInput3Freq_Value=781250
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
