--- a/dashboard-board/dashboard-board.ioc
+++ b/dashboard-board/dashboard-board.ioc
@@ -2,8 +2,23 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,USB_DEVICE_M4\:I,USB_HOST_M4\:I,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,ETH\:I,FDCAN1\:I,FDCAN2\:I,FMC\:I,QUADSPI\:I,SAI2\:I,SDMMC1\:I,USART3\:I,LTDC\:I,USB_OTG_FS\:I,SAI4\:I,DEBUG,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO
+CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,USB_DEVICE_M4\:I,USB_HOST_M4\:I,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,DEBUG,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO,FMC\:I
 CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,CORTEX_M7\:I,DEBUG\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,SYS\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,MEMORYMAP\:I
+FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
+FMC.ExitSelfRefreshDelay1=7
+FMC.IPParameters=CASLatency1,SDClockPeriod1,SDClockPeriod2,ReadBurst1,ReadBurst2,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,RowCycleDelay2,WriteRecoveryTime1,RPDelay1,RPDelay2,RCDDelay1
+FMC.LoadToActiveDelay1=2
+FMC.RCDDelay1=2
+FMC.RPDelay1=2
+FMC.RPDelay2=2
+FMC.ReadBurst1=FMC_SDRAM_RBURST_ENABLE
+FMC.ReadBurst2=FMC_SDRAM_RBURST_ENABLE
+FMC.RowCycleDelay1=7
+FMC.RowCycleDelay2=7
+FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SelfRefreshTime1=4
+FMC.WriteRecoveryTime1=3
 File.Version=6
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -15,21 +30,60 @@ Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M4
 Mcu.IP1=CORTEX_M7
-Mcu.IP2=MEMORYMAP
-Mcu.IP3=NVIC1
-Mcu.IP4=NVIC2
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=SYS_M4
-Mcu.IPNb=8
+Mcu.IP2=FMC
+Mcu.IP3=MEMORYMAP
+Mcu.IP4=NVIC1
+Mcu.IP5=NVIC2
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=SYS_M4
+Mcu.IPNb=9
 Mcu.Name=STM32H745XIHx
 Mcu.Package=TFBGA240
-Mcu.Pin0=PH1-OSC_OUT (PH1)
-Mcu.Pin1=PH0-OSC_IN (PH0)
-Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.Pin3=VP_SYS_M4_VS_Systick
-Mcu.Pin4=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=5
+Mcu.Pin0=PE1
+Mcu.Pin1=PE0
+Mcu.Pin10=PF3
+Mcu.Pin11=PG4
+Mcu.Pin12=PH1-OSC_OUT (PH1)
+Mcu.Pin13=PH0-OSC_IN (PH0)
+Mcu.Pin14=PF5
+Mcu.Pin15=PF4
+Mcu.Pin16=PE10
+Mcu.Pin17=PH5
+Mcu.Pin18=PF13
+Mcu.Pin19=PF14
+Mcu.Pin2=PG15
+Mcu.Pin20=PE9
+Mcu.Pin21=PE11
+Mcu.Pin22=PD15
+Mcu.Pin23=PD14
+Mcu.Pin24=PF12
+Mcu.Pin25=PF15
+Mcu.Pin26=PE12
+Mcu.Pin27=PE15
+Mcu.Pin28=PF11
+Mcu.Pin29=PG0
+Mcu.Pin3=PD0
+Mcu.Pin30=PE8
+Mcu.Pin31=PE13
+Mcu.Pin32=PH6
+Mcu.Pin33=PD10
+Mcu.Pin34=PD9
+Mcu.Pin35=PG1
+Mcu.Pin36=PE7
+Mcu.Pin37=PE14
+Mcu.Pin38=PH7
+Mcu.Pin39=PD8
+Mcu.Pin4=PD1
+Mcu.Pin40=VP_SYS_VS_Systick
+Mcu.Pin41=VP_SYS_M4_VS_Systick
+Mcu.Pin42=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin5=PG8
+Mcu.Pin6=PF2
+Mcu.Pin7=PF1
+Mcu.Pin8=PF0
+Mcu.Pin9=PG5
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745XIHx
@@ -57,6 +111,146 @@ NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PD0.GPIOParameters=PinAttribute
+PD0.Locked=true
+PD0.PinAttribute=CortexM4
+PD0.Signal=FMC_D2_DA2
+PD1.GPIOParameters=PinAttribute
+PD1.Locked=true
+PD1.PinAttribute=CortexM4
+PD1.Signal=FMC_D3_DA3
+PD10.GPIOParameters=PinAttribute
+PD10.Locked=true
+PD10.PinAttribute=CortexM4
+PD10.Signal=FMC_D15_DA15
+PD14.GPIOParameters=PinAttribute
+PD14.Locked=true
+PD14.PinAttribute=CortexM4
+PD14.Signal=FMC_D0_DA0
+PD15.GPIOParameters=PinAttribute
+PD15.Locked=true
+PD15.PinAttribute=CortexM4
+PD15.Signal=FMC_D1_DA1
+PD8.GPIOParameters=PinAttribute
+PD8.Locked=true
+PD8.PinAttribute=CortexM4
+PD8.Signal=FMC_D13_DA13
+PD9.GPIOParameters=PinAttribute
+PD9.Locked=true
+PD9.PinAttribute=CortexM4
+PD9.Signal=FMC_D14_DA14
+PE0.GPIOParameters=PinAttribute
+PE0.Locked=true
+PE0.PinAttribute=CortexM4
+PE0.Signal=FMC_NBL0
+PE1.GPIOParameters=PinAttribute
+PE1.Locked=true
+PE1.PinAttribute=CortexM4
+PE1.Signal=FMC_NBL1
+PE10.GPIOParameters=PinAttribute
+PE10.Locked=true
+PE10.PinAttribute=CortexM4
+PE10.Signal=FMC_D7_DA7
+PE11.GPIOParameters=PinAttribute
+PE11.Locked=true
+PE11.PinAttribute=CortexM4
+PE11.Signal=FMC_D8_DA8
+PE12.GPIOParameters=PinAttribute
+PE12.Locked=true
+PE12.PinAttribute=CortexM4
+PE12.Signal=FMC_D9_DA9
+PE13.GPIOParameters=PinAttribute
+PE13.Locked=true
+PE13.PinAttribute=CortexM4
+PE13.Signal=FMC_D10_DA10
+PE14.GPIOParameters=PinAttribute
+PE14.Locked=true
+PE14.PinAttribute=CortexM4
+PE14.Signal=FMC_D11_DA11
+PE15.GPIOParameters=PinAttribute
+PE15.Locked=true
+PE15.PinAttribute=CortexM4
+PE15.Signal=FMC_D12_DA12
+PE7.GPIOParameters=PinAttribute
+PE7.Locked=true
+PE7.PinAttribute=CortexM4
+PE7.Signal=FMC_D4_DA4
+PE8.GPIOParameters=PinAttribute
+PE8.Locked=true
+PE8.PinAttribute=CortexM4
+PE8.Signal=FMC_D5_DA5
+PE9.GPIOParameters=PinAttribute
+PE9.Locked=true
+PE9.PinAttribute=CortexM4
+PE9.Signal=FMC_D6_DA6
+PF0.GPIOParameters=PinAttribute
+PF0.Locked=true
+PF0.PinAttribute=CortexM4
+PF0.Signal=FMC_A0
+PF1.GPIOParameters=PinAttribute
+PF1.Locked=true
+PF1.PinAttribute=CortexM4
+PF1.Signal=FMC_A1
+PF11.GPIOParameters=PinAttribute
+PF11.Locked=true
+PF11.PinAttribute=CortexM4
+PF11.Signal=FMC_SDNRAS
+PF12.GPIOParameters=PinAttribute
+PF12.Locked=true
+PF12.PinAttribute=CortexM4
+PF12.Signal=FMC_A6
+PF13.GPIOParameters=PinAttribute
+PF13.Locked=true
+PF13.PinAttribute=CortexM4
+PF13.Signal=FMC_A7
+PF14.GPIOParameters=PinAttribute
+PF14.Locked=true
+PF14.PinAttribute=CortexM4
+PF14.Signal=FMC_A8
+PF15.GPIOParameters=PinAttribute
+PF15.Locked=true
+PF15.PinAttribute=CortexM4
+PF15.Signal=FMC_A9
+PF2.GPIOParameters=PinAttribute
+PF2.Locked=true
+PF2.PinAttribute=CortexM4
+PF2.Signal=FMC_A2
+PF3.GPIOParameters=PinAttribute
+PF3.Locked=true
+PF3.PinAttribute=CortexM4
+PF3.Signal=FMC_A3
+PF4.GPIOParameters=PinAttribute
+PF4.Locked=true
+PF4.PinAttribute=CortexM4
+PF4.Signal=FMC_A4
+PF5.GPIOParameters=PinAttribute
+PF5.Locked=true
+PF5.PinAttribute=CortexM4
+PF5.Signal=FMC_A5
+PG0.GPIOParameters=PinAttribute
+PG0.Locked=true
+PG0.PinAttribute=CortexM4
+PG0.Signal=FMC_A10
+PG1.GPIOParameters=PinAttribute
+PG1.Locked=true
+PG1.PinAttribute=CortexM4
+PG1.Signal=FMC_A11
+PG15.GPIOParameters=PinAttribute
+PG15.Locked=true
+PG15.PinAttribute=CortexM4
+PG15.Signal=FMC_SDNCAS
+PG4.GPIOParameters=PinAttribute
+PG4.Locked=true
+PG4.PinAttribute=CortexM4
+PG4.Signal=FMC_A14_BA0
+PG5.GPIOParameters=PinAttribute
+PG5.Locked=true
+PG5.PinAttribute=CortexM4
+PG5.Signal=FMC_A15_BA1
+PG8.GPIOParameters=PinAttribute
+PG8.Locked=true
+PG8.PinAttribute=CortexM4
+PG8.Signal=FMC_SDCLK
 PH0-OSC_IN\ (PH0).GPIOParameters=PinAttribute
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).PinAttribute=Free
@@ -65,6 +259,20 @@ PH1-OSC_OUT\ (PH1).GPIOParameters=PinAttribute
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
 PH1-OSC_OUT\ (PH1).PinAttribute=Free
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
+PH5.GPIOParameters=PinAttribute
+PH5.Locked=true
+PH5.PinAttribute=CortexM4
+PH5.Signal=FMC_SDNWE
+PH6.GPIOParameters=PinAttribute
+PH6.Locked=true
+PH6.Mode=SdramChipSelect2_1
+PH6.PinAttribute=CortexM4
+PH6.Signal=FMC_SDNE1
+PH7.GPIOParameters=PinAttribute
+PH7.Locked=true
+PH7.Mode=SdramChipSelect2_1
+PH7.PinAttribute=CortexM4
+PH7.Signal=FMC_SDCKE1
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -184,6 +392,78 @@ RCC.VCO3OutputFreq_Value=150000000
 RCC.VCOInput1Freq_Value=12500000
 RCC.VCOInput2Freq_Value=781250
 RCC.VCOInput3Freq_Value=781250
+SH.FMC_A0.0=FMC_A0,12b-sda1
+SH.FMC_A0.ConfNb=1
+SH.FMC_A1.0=FMC_A1,12b-sda1
+SH.FMC_A1.ConfNb=1
+SH.FMC_A10.0=FMC_A10,12b-sda1
+SH.FMC_A10.ConfNb=1
+SH.FMC_A11.0=FMC_A11,12b-sda1
+SH.FMC_A11.ConfNb=1
+SH.FMC_A14_BA0.0=FMC_BA0,FourSdramBanks1
+SH.FMC_A14_BA0.ConfNb=1
+SH.FMC_A15_BA1.0=FMC_BA1,FourSdramBanks1
+SH.FMC_A15_BA1.ConfNb=1
+SH.FMC_A2.0=FMC_A2,12b-sda1
+SH.FMC_A2.ConfNb=1
+SH.FMC_A3.0=FMC_A3,12b-sda1
+SH.FMC_A3.ConfNb=1
+SH.FMC_A4.0=FMC_A4,12b-sda1
+SH.FMC_A4.ConfNb=1
+SH.FMC_A5.0=FMC_A5,12b-sda1
+SH.FMC_A5.ConfNb=1
+SH.FMC_A6.0=FMC_A6,12b-sda1
+SH.FMC_A6.ConfNb=1
+SH.FMC_A7.0=FMC_A7,12b-sda1
+SH.FMC_A7.ConfNb=1
+SH.FMC_A8.0=FMC_A8,12b-sda1
+SH.FMC_A8.ConfNb=1
+SH.FMC_A9.0=FMC_A9,12b-sda1
+SH.FMC_A9.ConfNb=1
+SH.FMC_D0_DA0.0=FMC_D0,sd-16b-d1
+SH.FMC_D0_DA0.ConfNb=1
+SH.FMC_D10_DA10.0=FMC_D10,sd-16b-d1
+SH.FMC_D10_DA10.ConfNb=1
+SH.FMC_D11_DA11.0=FMC_D11,sd-16b-d1
+SH.FMC_D11_DA11.ConfNb=1
+SH.FMC_D12_DA12.0=FMC_D12,sd-16b-d1
+SH.FMC_D12_DA12.ConfNb=1
+SH.FMC_D13_DA13.0=FMC_D13,sd-16b-d1
+SH.FMC_D13_DA13.ConfNb=1
+SH.FMC_D14_DA14.0=FMC_D14,sd-16b-d1
+SH.FMC_D14_DA14.ConfNb=1
+SH.FMC_D15_DA15.0=FMC_D15,sd-16b-d1
+SH.FMC_D15_DA15.ConfNb=1
+SH.FMC_D1_DA1.0=FMC_D1,sd-16b-d1
+SH.FMC_D1_DA1.ConfNb=1
+SH.FMC_D2_DA2.0=FMC_D2,sd-16b-d1
+SH.FMC_D2_DA2.ConfNb=1
+SH.FMC_D3_DA3.0=FMC_D3,sd-16b-d1
+SH.FMC_D3_DA3.ConfNb=1
+SH.FMC_D4_DA4.0=FMC_D4,sd-16b-d1
+SH.FMC_D4_DA4.ConfNb=1
+SH.FMC_D5_DA5.0=FMC_D5,sd-16b-d1
+SH.FMC_D5_DA5.ConfNb=1
+SH.FMC_D6_DA6.0=FMC_D6,sd-16b-d1
+SH.FMC_D6_DA6.ConfNb=1
+SH.FMC_D7_DA7.0=FMC_D7,sd-16b-d1
+SH.FMC_D7_DA7.ConfNb=1
+SH.FMC_D8_DA8.0=FMC_D8,sd-16b-d1
+SH.FMC_D8_DA8.ConfNb=1
+SH.FMC_D9_DA9.0=FMC_D9,sd-16b-d1
+SH.FMC_D9_DA9.ConfNb=1
+SH.FMC_NBL0.0=FMC_NBL0,Sd2ByteEnable1
+SH.FMC_NBL0.ConfNb=1
+SH.FMC_NBL1.0=FMC_NBL1,Sd2ByteEnable1
+SH.FMC_NBL1.ConfNb=1
+SH.FMC_SDCLK.0=FMC_SDCLK,12b-sda1
+SH.FMC_SDCLK.ConfNb=1
+SH.FMC_SDNCAS.0=FMC_SDNCAS,12b-sda1
+SH.FMC_SDNCAS.ConfNb=1
+SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
+SH.FMC_SDNRAS.ConfNb=1
+SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
+SH.FMC_SDNWE.ConfNb=1
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_M4_VS_Systick.Mode=SysTick
