--- a/dashboard-board/dashboard-board.ioc
+++ b/dashboard-board/dashboard-board.ioc
@@ -22,7 +22,7 @@ CORTEX_M4.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_4G
 CORTEX_M4.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_32MB
 CORTEX_M4.Size-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_SIZE_128MB
 CORTEX_M4.SubRegionDisable-Cortex_Memory_Protection_Unit_Region0_Settings=0x87
-CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,USB_DEVICE_M4\:I,USB_HOST_M4\:I,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,DEBUG,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO,FMC\:I
+CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,USB_DEVICE_M4\:I,USB_HOST_M4\:I,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,DEBUG,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO,FMC\:I,LTDC\:I
 CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,CORTEX_M7\:I,DEBUG\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,SYS\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,MEMORYMAP\:I
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
 FMC.ExitSelfRefreshDelay1=7
@@ -41,6 +41,23 @@ FMC.SelfRefreshTime1=4
 FMC.WriteRecoveryTime1=3
 File.Version=6
 KeepUserPlacement=false
+LTDC.ActiveH=272
+LTDC.ActiveW=480
+LTDC.Alpha_L0=255
+LTDC.Blue=255
+LTDC.FBStartAdress_L0=0xD0000000
+LTDC.Green=255
+LTDC.HBP=13
+LTDC.HFP=32
+LTDC.HSync=41
+LTDC.IPParameters=HSync,HBP,ActiveW,HFP,VSync,ActiveH,Red,Green,Blue,Layers,WindowX1_L0,WindowY1_L0,Alpha_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0
+LTDC.ImageHeight_L0=272
+LTDC.ImageWidth_L0=480
+LTDC.Layers=0
+LTDC.Red=255
+LTDC.VSync=10
+LTDC.WindowX1_L0=480
+LTDC.WindowY1_L0=272
 MMTAppRegionsCount=0
 MMTConfigApplied=false
 Mcu.CPN=STM32H745XIH3
@@ -51,59 +68,91 @@ Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M4
 Mcu.IP1=CORTEX_M7
 Mcu.IP2=FMC
-Mcu.IP3=MEMORYMAP
-Mcu.IP4=NVIC1
-Mcu.IP5=NVIC2
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IP8=SYS_M4
-Mcu.IPNb=9
+Mcu.IP3=LTDC
+Mcu.IP4=MEMORYMAP
+Mcu.IP5=NVIC1
+Mcu.IP6=NVIC2
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=SYS_M4
+Mcu.IPNb=10
 Mcu.Name=STM32H745XIHx
 Mcu.Package=TFBGA240
-Mcu.Pin0=PE1
-Mcu.Pin1=PE0
-Mcu.Pin10=PF3
-Mcu.Pin11=PG4
-Mcu.Pin12=PH1-OSC_OUT (PH1)
-Mcu.Pin13=PH0-OSC_IN (PH0)
-Mcu.Pin14=PF5
-Mcu.Pin15=PF4
-Mcu.Pin16=PE10
-Mcu.Pin17=PH5
-Mcu.Pin18=PF13
-Mcu.Pin19=PF14
-Mcu.Pin2=PG15
-Mcu.Pin20=PE9
-Mcu.Pin21=PE11
-Mcu.Pin22=PD15
-Mcu.Pin23=PD14
-Mcu.Pin24=PF12
-Mcu.Pin25=PF15
-Mcu.Pin26=PE12
-Mcu.Pin27=PE15
-Mcu.Pin28=PF11
-Mcu.Pin29=PG0
-Mcu.Pin3=PD0
-Mcu.Pin30=PE8
-Mcu.Pin31=PE13
-Mcu.Pin32=PH6
-Mcu.Pin33=PD10
-Mcu.Pin34=PD9
-Mcu.Pin35=PG1
-Mcu.Pin36=PE7
-Mcu.Pin37=PE14
-Mcu.Pin38=PH7
-Mcu.Pin39=PD8
-Mcu.Pin4=PD1
-Mcu.Pin40=VP_SYS_VS_Systick
-Mcu.Pin41=VP_SYS_M4_VS_Systick
-Mcu.Pin42=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin5=PG8
-Mcu.Pin6=PF2
-Mcu.Pin7=PF1
-Mcu.Pin8=PF0
-Mcu.Pin9=PG5
-Mcu.PinsNb=43
+Mcu.Pin0=PK5
+Mcu.Pin1=PC10
+Mcu.Pin10=PD7
+Mcu.Pin11=PG15
+Mcu.Pin12=PK7
+Mcu.Pin13=PJ14
+Mcu.Pin14=PJ12
+Mcu.Pin15=PD0
+Mcu.Pin16=PI9
+Mcu.Pin17=PJ13
+Mcu.Pin18=PD1
+Mcu.Pin19=PG8
+Mcu.Pin2=PI1
+Mcu.Pin20=PF2
+Mcu.Pin21=PF1
+Mcu.Pin22=PF0
+Mcu.Pin23=PG5
+Mcu.Pin24=PI12
+Mcu.Pin25=PI14
+Mcu.Pin26=PF3
+Mcu.Pin27=PG4
+Mcu.Pin28=PG2
+Mcu.Pin29=PK2
+Mcu.Pin3=PI0
+Mcu.Pin30=PH1-OSC_OUT (PH1)
+Mcu.Pin31=PH0-OSC_IN (PH0)
+Mcu.Pin32=PF5
+Mcu.Pin33=PF4
+Mcu.Pin34=PJ11
+Mcu.Pin35=PJ10
+Mcu.Pin36=PJ9
+Mcu.Pin37=PJ0
+Mcu.Pin38=PE10
+Mcu.Pin39=PJ8
+Mcu.Pin4=PE1
+Mcu.Pin40=PJ7
+Mcu.Pin41=PJ6
+Mcu.Pin42=PH5
+Mcu.Pin43=PI15
+Mcu.Pin44=PF13
+Mcu.Pin45=PF14
+Mcu.Pin46=PE9
+Mcu.Pin47=PE11
+Mcu.Pin48=PD15
+Mcu.Pin49=PD14
+Mcu.Pin5=PK4
+Mcu.Pin50=PF12
+Mcu.Pin51=PF15
+Mcu.Pin52=PE12
+Mcu.Pin53=PE15
+Mcu.Pin54=PJ5
+Mcu.Pin55=PH9
+Mcu.Pin56=PF11
+Mcu.Pin57=PG0
+Mcu.Pin58=PE8
+Mcu.Pin59=PE13
+Mcu.Pin6=PJ15
+Mcu.Pin60=PH6
+Mcu.Pin61=PB12
+Mcu.Pin62=PD10
+Mcu.Pin63=PD9
+Mcu.Pin64=PJ3
+Mcu.Pin65=PJ4
+Mcu.Pin66=PG1
+Mcu.Pin67=PE7
+Mcu.Pin68=PE14
+Mcu.Pin69=PH7
+Mcu.Pin7=PE0
+Mcu.Pin70=PD8
+Mcu.Pin71=VP_SYS_VS_Systick
+Mcu.Pin72=VP_SYS_M4_VS_Systick
+Mcu.Pin73=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin8=PK6
+Mcu.Pin9=PK3
+Mcu.PinsNb=74
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745XIHx
@@ -131,6 +180,14 @@ NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PB12.GPIOParameters=PinAttribute
+PB12.Locked=true
+PB12.PinAttribute=Free
+PB12.Signal=GPIO_Output
+PC10.GPIOParameters=PinAttribute
+PC10.Mode=RGB888
+PC10.PinAttribute=CortexM4
+PC10.Signal=LTDC_R2
 PD0.GPIOParameters=PinAttribute
 PD0.Locked=true
 PD0.PinAttribute=CortexM4
@@ -151,6 +208,10 @@ PD15.GPIOParameters=PinAttribute
 PD15.Locked=true
 PD15.PinAttribute=CortexM4
 PD15.Signal=FMC_D1_DA1
+PD7.GPIOParameters=PinAttribute
+PD7.Locked=true
+PD7.PinAttribute=Free
+PD7.Signal=GPIO_Output
 PD8.GPIOParameters=PinAttribute
 PD8.Locked=true
 PD8.PinAttribute=CortexM4
@@ -259,6 +320,10 @@ PG15.GPIOParameters=PinAttribute
 PG15.Locked=true
 PG15.PinAttribute=CortexM4
 PG15.Signal=FMC_SDNCAS
+PG2.GPIOParameters=PinAttribute
+PG2.Locked=true
+PG2.PinAttribute=Free
+PG2.Signal=GPXTI2
 PG4.GPIOParameters=PinAttribute
 PG4.Locked=true
 PG4.PinAttribute=CortexM4
@@ -293,6 +358,141 @@ PH7.Locked=true
 PH7.Mode=SdramChipSelect2_1
 PH7.PinAttribute=CortexM4
 PH7.Signal=FMC_SDCKE1
+PH9.GPIOParameters=PinAttribute
+PH9.Locked=true
+PH9.Mode=RGB888
+PH9.PinAttribute=CortexM4
+PH9.Signal=LTDC_R3
+PI0.GPIOParameters=PinAttribute
+PI0.Locked=true
+PI0.Mode=RGB888
+PI0.PinAttribute=CortexM4
+PI0.Signal=LTDC_G5
+PI1.GPIOParameters=PinAttribute
+PI1.Locked=true
+PI1.Mode=RGB888
+PI1.PinAttribute=CortexM4
+PI1.Signal=LTDC_G6
+PI12.GPIOParameters=PinAttribute
+PI12.Locked=true
+PI12.Mode=RGB888
+PI12.PinAttribute=CortexM4
+PI12.Signal=LTDC_HSYNC
+PI14.GPIOParameters=PinAttribute
+PI14.Locked=true
+PI14.Mode=RGB888
+PI14.PinAttribute=CortexM4
+PI14.Signal=LTDC_CLK
+PI15.GPIOParameters=PinAttribute
+PI15.Locked=true
+PI15.Mode=RGB888
+PI15.PinAttribute=CortexM4
+PI15.Signal=LTDC_R0
+PI9.GPIOParameters=PinAttribute
+PI9.Locked=true
+PI9.Mode=RGB888
+PI9.PinAttribute=CortexM4
+PI9.Signal=LTDC_VSYNC
+PJ0.GPIOParameters=PinAttribute
+PJ0.Locked=true
+PJ0.Mode=RGB888
+PJ0.PinAttribute=CortexM4
+PJ0.Signal=LTDC_R1
+PJ10.GPIOParameters=PinAttribute
+PJ10.Locked=true
+PJ10.Mode=RGB888
+PJ10.PinAttribute=CortexM4
+PJ10.Signal=LTDC_G3
+PJ11.GPIOParameters=PinAttribute
+PJ11.Locked=true
+PJ11.Mode=RGB888
+PJ11.PinAttribute=CortexM4
+PJ11.Signal=LTDC_G4
+PJ12.GPIOParameters=PinAttribute
+PJ12.Locked=true
+PJ12.Mode=RGB888
+PJ12.PinAttribute=CortexM4
+PJ12.Signal=LTDC_B0
+PJ13.GPIOParameters=PinAttribute
+PJ13.Locked=true
+PJ13.Mode=RGB888
+PJ13.PinAttribute=CortexM4
+PJ13.Signal=LTDC_B1
+PJ14.GPIOParameters=PinAttribute
+PJ14.Locked=true
+PJ14.Mode=RGB888
+PJ14.PinAttribute=CortexM4
+PJ14.Signal=LTDC_B2
+PJ15.GPIOParameters=PinAttribute
+PJ15.Locked=true
+PJ15.Mode=RGB888
+PJ15.PinAttribute=CortexM4
+PJ15.Signal=LTDC_B3
+PJ3.GPIOParameters=PinAttribute
+PJ3.Locked=true
+PJ3.Mode=RGB888
+PJ3.PinAttribute=CortexM4
+PJ3.Signal=LTDC_R4
+PJ4.GPIOParameters=PinAttribute
+PJ4.Locked=true
+PJ4.Mode=RGB888
+PJ4.PinAttribute=CortexM4
+PJ4.Signal=LTDC_R5
+PJ5.GPIOParameters=PinAttribute
+PJ5.Locked=true
+PJ5.Mode=RGB888
+PJ5.PinAttribute=CortexM4
+PJ5.Signal=LTDC_R6
+PJ6.GPIOParameters=PinAttribute
+PJ6.Locked=true
+PJ6.Mode=RGB888
+PJ6.PinAttribute=CortexM4
+PJ6.Signal=LTDC_R7
+PJ7.GPIOParameters=PinAttribute
+PJ7.Locked=true
+PJ7.Mode=RGB888
+PJ7.PinAttribute=CortexM4
+PJ7.Signal=LTDC_G0
+PJ8.GPIOParameters=PinAttribute
+PJ8.Locked=true
+PJ8.Mode=RGB888
+PJ8.PinAttribute=CortexM4
+PJ8.Signal=LTDC_G1
+PJ9.GPIOParameters=PinAttribute
+PJ9.Locked=true
+PJ9.Mode=RGB888
+PJ9.PinAttribute=CortexM4
+PJ9.Signal=LTDC_G2
+PK2.GPIOParameters=PinAttribute
+PK2.Locked=true
+PK2.Mode=RGB888
+PK2.PinAttribute=CortexM4
+PK2.Signal=LTDC_G7
+PK3.GPIOParameters=PinAttribute
+PK3.Locked=true
+PK3.Mode=RGB888
+PK3.PinAttribute=CortexM4
+PK3.Signal=LTDC_B4
+PK4.GPIOParameters=PinAttribute
+PK4.Locked=true
+PK4.Mode=RGB888
+PK4.PinAttribute=CortexM4
+PK4.Signal=LTDC_B5
+PK5.GPIOParameters=PinAttribute
+PK5.Locked=true
+PK5.Mode=RGB888
+PK5.PinAttribute=CortexM4
+PK5.Signal=LTDC_B6
+PK6.GPIOParameters=PinAttribute
+PK6.Locked=true
+PK6.Mode=RGB888
+PK6.PinAttribute=CortexM4
+PK6.Signal=LTDC_B7
+PK7.GPIOParameters=PinAttribute
+PK7.Locked=true
+PK7.Mode=RGB888
+PK7.PinAttribute=CortexM4
+PK7.Signal=LTDC_DE
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -326,7 +526,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_FMC_Init-FMC-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=50390625
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
@@ -484,6 +684,8 @@ SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
 SH.FMC_SDNRAS.ConfNb=1
 SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_M4_VS_Systick.Mode=SysTick
