feat: (dma2d) ioc setting
Based on: STM32H745I-DISCO BSP (stm32h745i_discovery_lcd)

--- a/dashboard-board/dashboard-board.ioc
+++ b/dashboard-board/dashboard-board.ioc
@@ -22,8 +22,10 @@ CORTEX_M4.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_4G
 CORTEX_M4.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_32MB
 CORTEX_M4.Size-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_SIZE_128MB
 CORTEX_M4.SubRegionDisable-Cortex_Memory_Protection_Unit_Region0_Settings=0x87
-CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,USB_DEVICE_M4\:I,USB_HOST_M4\:I,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,DEBUG,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO,FMC\:I,LTDC\:I
+CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,USB_DEVICE_M4\:I,USB_HOST_M4\:I,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,DEBUG,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO,FMC\:I,LTDC\:I,DMA2D\:I
 CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,CORTEX_M7\:I,DEBUG\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,SYS\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,MEMORYMAP\:I
+DMA2D.IPParameters=Mode
+DMA2D.Mode=DMA2D_M2M_PFC
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
 FMC.ExitSelfRefreshDelay1=7
 FMC.IPParameters=CASLatency1,SDClockPeriod1,SDClockPeriod2,ReadBurst1,ReadBurst2,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,RowCycleDelay2,WriteRecoveryTime1,RPDelay1,RPDelay2,RCDDelay1
@@ -67,15 +69,16 @@ Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M4
 Mcu.IP1=CORTEX_M7
-Mcu.IP2=FMC
-Mcu.IP3=LTDC
-Mcu.IP4=MEMORYMAP
-Mcu.IP5=NVIC1
-Mcu.IP6=NVIC2
-Mcu.IP7=RCC
-Mcu.IP8=SYS
-Mcu.IP9=SYS_M4
-Mcu.IPNb=10
+Mcu.IP10=SYS_M4
+Mcu.IP2=DMA2D
+Mcu.IP3=FMC
+Mcu.IP4=LTDC
+Mcu.IP5=MEMORYMAP
+Mcu.IP6=NVIC1
+Mcu.IP7=NVIC2
+Mcu.IP8=RCC
+Mcu.IP9=SYS
+Mcu.IPNb=11
 Mcu.Name=STM32H745XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PK5
@@ -147,12 +150,13 @@ Mcu.Pin68=PE14
 Mcu.Pin69=PH7
 Mcu.Pin7=PE0
 Mcu.Pin70=PD8
-Mcu.Pin71=VP_SYS_VS_Systick
-Mcu.Pin72=VP_SYS_M4_VS_Systick
-Mcu.Pin73=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin71=VP_DMA2D_VS_DMA2D
+Mcu.Pin72=VP_SYS_VS_Systick
+Mcu.Pin73=VP_SYS_M4_VS_Systick
+Mcu.Pin74=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin8=PK6
 Mcu.Pin9=PK3
-Mcu.PinsNb=74
+Mcu.PinsNb=75
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745XIHx
@@ -526,7 +530,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_FMC_Init-FMC-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_FMC_Init-FMC-false-HAL-true-CortexM4,3-MX_LTDC_Init-LTDC-false-HAL-true-CortexM4,4-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=50390625
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
@@ -686,6 +690,8 @@ SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_M4_VS_Systick.Mode=SysTick
