feat: (mdma) ios setting

--- a/dashboard-board/dashboard-board.ioc
+++ b/dashboard-board/dashboard-board.ioc
@@ -69,16 +69,17 @@ Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M4
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=SYS_M4
+Mcu.IP10=SYS
+Mcu.IP11=SYS_M4
 Mcu.IP2=DMA2D
 Mcu.IP3=FMC
 Mcu.IP4=LTDC
-Mcu.IP5=MEMORYMAP
-Mcu.IP6=NVIC1
-Mcu.IP7=NVIC2
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=11
+Mcu.IP5=MDMA
+Mcu.IP6=MEMORYMAP
+Mcu.IP7=NVIC1
+Mcu.IP8=NVIC2
+Mcu.IP9=RCC
+Mcu.IPNb=12
 Mcu.Name=STM32H745XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PK5
@@ -160,12 +161,40 @@ Mcu.PinsNb=75
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745XIHx
+Mdma.MDMA_Channel0.Request0=SW
+Mdma.MDMA_Channel0.RequestsNb=1
+Mdma.MDMA_Channel0.SW.0.BlockCount=0
+Mdma.MDMA_Channel0.SW.0.BlockDataLength=0
+Mdma.MDMA_Channel0.SW.0.BufferTransferLength=128
+Mdma.MDMA_Channel0.SW.0.CircularMode=MDMA_LINEAR_LIST
+Mdma.MDMA_Channel0.SW.0.DataAlignment=MDMA_DATAALIGN_PACKENABLE
+Mdma.MDMA_Channel0.SW.0.DestBlockAddressOffset=0
+Mdma.MDMA_Channel0.SW.0.DestBurst=MDMA_DEST_BURST_SINGLE
+Mdma.MDMA_Channel0.SW.0.DestDataSize=MDMA_DEST_DATASIZE_WORD
+Mdma.MDMA_Channel0.SW.0.DestinationInc=MDMA_DEST_INC_WORD
+Mdma.MDMA_Channel0.SW.0.DstAddress=0
+Mdma.MDMA_Channel0.SW.0.Endianness=MDMA_LITTLE_ENDIANNESS_PRESERVE
+Mdma.MDMA_Channel0.SW.0.Instance=MDMA_Channel0
+Mdma.MDMA_Channel0.SW.0.MaskAddress=0
+Mdma.MDMA_Channel0.SW.0.MaskData=0
+Mdma.MDMA_Channel0.SW.0.Priority=MDMA_PRIORITY_HIGH
+Mdma.MDMA_Channel0.SW.0.Rank=First
+Mdma.MDMA_Channel0.SW.0.RequestParameters=Instance,CircularMode,TransferTriggerMode,Priority,Endianness,SourceInc,DestinationInc,SourceDataSize,DestDataSize,DataAlignment,BufferTransferLength,SourceBurst,DestBurst,SourceBlockAddressOffset,DestBlockAddressOffset,MaskAddress,MaskData,SrcAddress,DstAddress,BlockDataLength,BlockCount,Rank
+Mdma.MDMA_Channel0.SW.0.SourceBlockAddressOffset=0
+Mdma.MDMA_Channel0.SW.0.SourceBurst=MDMA_SOURCE_BURST_SINGLE
+Mdma.MDMA_Channel0.SW.0.SourceDataSize=MDMA_SRC_DATASIZE_WORD
+Mdma.MDMA_Channel0.SW.0.SourceInc=MDMA_SRC_INC_WORD
+Mdma.MDMA_Channel0.SW.0.SrcAddress=0
+Mdma.MDMA_Channel0.SW.0.TransferTriggerMode=MDMA_BUFFER_TRANSFER
+Mdma.RequestSet0=MDMA_Channel0
+Mdma.RequestSetsNb=1
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC1.MDMA_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -530,7 +559,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_FMC_Init-FMC-false-HAL-true-CortexM4,3-MX_LTDC_Init-LTDC-false-HAL-true-CortexM4,4-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_MDMA_Init-MDMA-false-HAL-true-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_MDMA_Init-MDMA-false-HAL-true-CortexM4,3-MX_FMC_Init-FMC-false-HAL-true-CortexM4,4-MX_LTDC_Init-LTDC-false-HAL-true-CortexM4,5-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=50390625
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
