feat: change code generator

--- a/dashboard-board/dashboard-board.ioc
+++ b/dashboard-board/dashboard-board.ioc
@@ -60,7 +60,105 @@ LTDC.Red=255
 LTDC.VSync=10
 LTDC.WindowX1_L0=480
 LTDC.WindowY1_L0=272
-MMTAppRegionsCount=0
+MMTAppReg1.MEMORYMAP.AppRegionName=RAM
+MMTAppReg1.MEMORYMAP.ContextName=CortexM7
+MMTAppReg1.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg1.MEMORYMAP.DefaultDataRegion=true
+MMTAppReg1.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,DefaultDataRegion
+MMTAppReg1.MEMORYMAP.Name=RAM
+MMTAppReg1.MEMORYMAP.Size=131072
+MMTAppReg1.MEMORYMAP.StartAddress=0x20000000
+MMTAppReg10.MEMORYMAP.AppRegionName=M4 non Shared Region
+MMTAppReg10.MEMORYMAP.ContextLink=reserved
+MMTAppReg10.MEMORYMAP.ContextName=CortexM7
+MMTAppReg10.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg10.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,ReservedRegion,ContextLink
+MMTAppReg10.MEMORYMAP.MemType=ROM
+MMTAppReg10.MEMORYMAP.Name=M4 non Shared Region
+MMTAppReg10.MEMORYMAP.ReservedRegion=true
+MMTAppReg10.MEMORYMAP.Size=524288
+MMTAppReg10.MEMORYMAP.StartAddress=0x08100000
+MMTAppReg2.MEMORYMAP.AppRegionName=ITCMRAM
+MMTAppReg2.MEMORYMAP.Cacheability=WTRA
+MMTAppReg2.MEMORYMAP.ContextName=CortexM7
+MMTAppReg2.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg2.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability
+MMTAppReg2.MEMORYMAP.Name=ITCMRAM
+MMTAppReg2.MEMORYMAP.Size=65536
+MMTAppReg2.MEMORYMAP.StartAddress=0x00000000
+MMTAppReg3.MEMORYMAP.AppRegionName=RAM_D1
+MMTAppReg3.MEMORYMAP.ContextLink=shared
+MMTAppReg3.MEMORYMAP.ContextName=CortexM7
+MMTAppReg3.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg3.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,ContextLink
+MMTAppReg3.MEMORYMAP.Name=RAM_D1
+MMTAppReg3.MEMORYMAP.Size=524288
+MMTAppReg3.MEMORYMAP.StartAddress=0x24000000
+MMTAppReg4.MEMORYMAP.AppRegionName=M7 non Shared Region
+MMTAppReg4.MEMORYMAP.ContextLink=reserved
+MMTAppReg4.MEMORYMAP.ContextName=CortexM4
+MMTAppReg4.MEMORYMAP.CoreName=ARM Cortex-M4
+MMTAppReg4.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,ReservedRegion,ContextLink
+MMTAppReg4.MEMORYMAP.Name=M7 non Shared Region
+MMTAppReg4.MEMORYMAP.ReservedRegion=true
+MMTAppReg4.MEMORYMAP.Size=524288
+MMTAppReg4.MEMORYMAP.StartAddress=0x24000000
+MMTAppReg5.MEMORYMAP.AP=RO_priv_only
+MMTAppReg5.MEMORYMAP.AppRegionName=FLASH
+MMTAppReg5.MEMORYMAP.Cacheability=WTRA
+MMTAppReg5.MEMORYMAP.ContextLink=shared
+MMTAppReg5.MEMORYMAP.ContextName=CortexM7
+MMTAppReg5.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg5.MEMORYMAP.DefaultCodeRegion=true
+MMTAppReg5.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,AP,Cacheability,DefaultCodeRegion,ISRRegion,RootBootRegion,ContextLink
+MMTAppReg5.MEMORYMAP.ISRRegion=true
+MMTAppReg5.MEMORYMAP.MemType=ROM
+MMTAppReg5.MEMORYMAP.Name=FLASH
+MMTAppReg5.MEMORYMAP.RootBootRegion=true
+MMTAppReg5.MEMORYMAP.Size=524288
+MMTAppReg5.MEMORYMAP.StartAddress=0x08000000
+MMTAppReg6.MEMORYMAP.AppRegionName=M7 non Shared Region
+MMTAppReg6.MEMORYMAP.ContextLink=reserved
+MMTAppReg6.MEMORYMAP.ContextName=CortexM4
+MMTAppReg6.MEMORYMAP.CoreName=ARM Cortex-M4
+MMTAppReg6.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,ReservedRegion,ContextLink
+MMTAppReg6.MEMORYMAP.MemType=ROM
+MMTAppReg6.MEMORYMAP.Name=M7 non Shared Region
+MMTAppReg6.MEMORYMAP.ReservedRegion=true
+MMTAppReg6.MEMORYMAP.Size=524288
+MMTAppReg6.MEMORYMAP.StartAddress=0x08000000
+MMTAppReg7.MEMORYMAP.AppRegionName=RAM
+MMTAppReg7.MEMORYMAP.ContextLink=shared
+MMTAppReg7.MEMORYMAP.ContextName=CortexM4
+MMTAppReg7.MEMORYMAP.CoreName=ARM Cortex-M4
+MMTAppReg7.MEMORYMAP.DefaultDataRegion=true
+MMTAppReg7.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,DefaultDataRegion,ContextLink
+MMTAppReg7.MEMORYMAP.Name=RAM
+MMTAppReg7.MEMORYMAP.Size=294912
+MMTAppReg7.MEMORYMAP.StartAddress=0x10000000
+MMTAppReg8.MEMORYMAP.AppRegionName=M4 non Shared Region
+MMTAppReg8.MEMORYMAP.ContextLink=reserved
+MMTAppReg8.MEMORYMAP.ContextName=CortexM7
+MMTAppReg8.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg8.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,ReservedRegion,ContextLink
+MMTAppReg8.MEMORYMAP.Name=M4 non Shared Region
+MMTAppReg8.MEMORYMAP.ReservedRegion=true
+MMTAppReg8.MEMORYMAP.Size=294912
+MMTAppReg8.MEMORYMAP.StartAddress=0x10000000
+MMTAppReg9.MEMORYMAP.AP=RO_priv_only
+MMTAppReg9.MEMORYMAP.AppRegionName=FLASH
+MMTAppReg9.MEMORYMAP.ContextLink=shared
+MMTAppReg9.MEMORYMAP.ContextName=CortexM4
+MMTAppReg9.MEMORYMAP.CoreName=ARM Cortex-M4
+MMTAppReg9.MEMORYMAP.DefaultCodeRegion=true
+MMTAppReg9.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,AP,DefaultCodeRegion,ISRRegion,RootBootRegion,ContextLink
+MMTAppReg9.MEMORYMAP.ISRRegion=true
+MMTAppReg9.MEMORYMAP.MemType=ROM
+MMTAppReg9.MEMORYMAP.Name=FLASH
+MMTAppReg9.MEMORYMAP.RootBootRegion=true
+MMTAppReg9.MEMORYMAP.Size=524288
+MMTAppReg9.MEMORYMAP.StartAddress=0x08100000
+MMTAppRegionsCount=10
 MMTConfigApplied=false
 Mcu.CPN=STM32H745XIH3
 Mcu.Context0=CortexM7
@@ -533,7 +631,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.BootMode=boot0
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
