feat: (gpio) ioc setting
LCD gpio

--- a/dashboard-board/dashboard-board.ioc
+++ b/dashboard-board/dashboard-board.ioc
@@ -23,6 +23,7 @@ CORTEX_M4.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_32
 CORTEX_M4.Size-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_SIZE_128MB
 CORTEX_M4.SubRegionDisable-Cortex_Memory_Protection_Unit_Region0_Settings=0x87
 CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,USB_DEVICE_M4\:I,USB_HOST_M4\:I,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,DEBUG,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO,FMC\:I,LTDC\:I,DMA2D\:I
+CortexM4.Pins=PD7,PG2,PB12
 CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,CORTEX_M7\:I,DEBUG\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,SYS\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,MEMORYMAP\:I
 DMA2D.IPParameters=Mode
 DMA2D.Mode=DMA2D_M2M_PFC
@@ -311,9 +312,11 @@ NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PB12.GPIOParameters=PinAttribute
+PB12.ContextOwner=CortexM4
+PB12.GPIOParameters=GPIO_Label,PinAttribute
+PB12.GPIO_Label=LCD_RST
 PB12.Locked=true
-PB12.PinAttribute=Free
+PB12.PinAttribute=CortexM4
 PB12.Signal=GPIO_Output
 PC10.GPIOParameters=PinAttribute
 PC10.Mode=RGB888
@@ -339,9 +342,11 @@ PD15.GPIOParameters=PinAttribute
 PD15.Locked=true
 PD15.PinAttribute=CortexM4
 PD15.Signal=FMC_D1_DA1
-PD7.GPIOParameters=PinAttribute
+PD7.ContextOwner=CortexM4
+PD7.GPIOParameters=GPIO_Label,PinAttribute
+PD7.GPIO_Label=LCD_DISP
 PD7.Locked=true
-PD7.PinAttribute=Free
+PD7.PinAttribute=CortexM4
 PD7.Signal=GPIO_Output
 PD8.GPIOParameters=PinAttribute
 PD8.Locked=true
@@ -451,9 +456,11 @@ PG15.GPIOParameters=PinAttribute
 PG15.Locked=true
 PG15.PinAttribute=CortexM4
 PG15.Signal=FMC_SDNCAS
-PG2.GPIOParameters=PinAttribute
+PG2.ContextOwner=CortexM4
+PG2.GPIOParameters=GPIO_Label,PinAttribute
+PG2.GPIO_Label=LCD_INT
 PG2.Locked=true
-PG2.PinAttribute=Free
+PG2.PinAttribute=CortexM4
 PG2.Signal=GPXTI2
 PG4.GPIOParameters=PinAttribute
 PG4.Locked=true
