--- a/dashboard-board/dashboard-board.ioc
+++ b/dashboard-board/dashboard-board.ioc
@@ -43,6 +43,7 @@ FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
 FMC.SelfRefreshTime1=4
 FMC.WriteRecoveryTime1=3
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LTDC.ActiveH=272
 LTDC.ActiveW=480
@@ -322,23 +323,28 @@ PC10.GPIOParameters=PinAttribute
 PC10.Mode=RGB888
 PC10.PinAttribute=CortexM4
 PC10.Signal=LTDC_R2
-PD0.GPIOParameters=PinAttribute
+PD0.GPIOParameters=GPIO_PuPd,PinAttribute
+PD0.GPIO_PuPd=GPIO_PULLUP
 PD0.Locked=true
 PD0.PinAttribute=CortexM4
 PD0.Signal=FMC_D2_DA2
-PD1.GPIOParameters=PinAttribute
+PD1.GPIOParameters=GPIO_PuPd,PinAttribute
+PD1.GPIO_PuPd=GPIO_PULLUP
 PD1.Locked=true
 PD1.PinAttribute=CortexM4
 PD1.Signal=FMC_D3_DA3
-PD10.GPIOParameters=PinAttribute
+PD10.GPIOParameters=GPIO_PuPd,PinAttribute
+PD10.GPIO_PuPd=GPIO_PULLUP
 PD10.Locked=true
 PD10.PinAttribute=CortexM4
 PD10.Signal=FMC_D15_DA15
-PD14.GPIOParameters=PinAttribute
+PD14.GPIOParameters=GPIO_PuPd,PinAttribute
+PD14.GPIO_PuPd=GPIO_PULLUP
 PD14.Locked=true
 PD14.PinAttribute=CortexM4
 PD14.Signal=FMC_D0_DA0
-PD15.GPIOParameters=PinAttribute
+PD15.GPIOParameters=GPIO_PuPd,PinAttribute
+PD15.GPIO_PuPd=GPIO_PULLUP
 PD15.Locked=true
 PD15.PinAttribute=CortexM4
 PD15.Signal=FMC_D1_DA1
@@ -348,111 +354,138 @@ PD7.GPIO_Label=LCD_DISP
 PD7.Locked=true
 PD7.PinAttribute=CortexM4
 PD7.Signal=GPIO_Output
-PD8.GPIOParameters=PinAttribute
+PD8.GPIOParameters=GPIO_PuPd,PinAttribute
+PD8.GPIO_PuPd=GPIO_PULLUP
 PD8.Locked=true
 PD8.PinAttribute=CortexM4
 PD8.Signal=FMC_D13_DA13
-PD9.GPIOParameters=PinAttribute
+PD9.GPIOParameters=GPIO_PuPd,PinAttribute
+PD9.GPIO_PuPd=GPIO_PULLUP
 PD9.Locked=true
 PD9.PinAttribute=CortexM4
 PD9.Signal=FMC_D14_DA14
-PE0.GPIOParameters=PinAttribute
+PE0.GPIOParameters=GPIO_PuPd,PinAttribute
+PE0.GPIO_PuPd=GPIO_PULLUP
 PE0.Locked=true
 PE0.PinAttribute=CortexM4
 PE0.Signal=FMC_NBL0
-PE1.GPIOParameters=PinAttribute
+PE1.GPIOParameters=GPIO_PuPd,PinAttribute
+PE1.GPIO_PuPd=GPIO_PULLUP
 PE1.Locked=true
 PE1.PinAttribute=CortexM4
 PE1.Signal=FMC_NBL1
-PE10.GPIOParameters=PinAttribute
+PE10.GPIOParameters=GPIO_PuPd,PinAttribute
+PE10.GPIO_PuPd=GPIO_PULLUP
 PE10.Locked=true
 PE10.PinAttribute=CortexM4
 PE10.Signal=FMC_D7_DA7
-PE11.GPIOParameters=PinAttribute
+PE11.GPIOParameters=GPIO_PuPd,PinAttribute
+PE11.GPIO_PuPd=GPIO_PULLUP
 PE11.Locked=true
 PE11.PinAttribute=CortexM4
 PE11.Signal=FMC_D8_DA8
-PE12.GPIOParameters=PinAttribute
+PE12.GPIOParameters=GPIO_PuPd,PinAttribute
+PE12.GPIO_PuPd=GPIO_PULLUP
 PE12.Locked=true
 PE12.PinAttribute=CortexM4
 PE12.Signal=FMC_D9_DA9
-PE13.GPIOParameters=PinAttribute
+PE13.GPIOParameters=GPIO_PuPd,PinAttribute
+PE13.GPIO_PuPd=GPIO_PULLUP
 PE13.Locked=true
 PE13.PinAttribute=CortexM4
 PE13.Signal=FMC_D10_DA10
-PE14.GPIOParameters=PinAttribute
+PE14.GPIOParameters=GPIO_PuPd,PinAttribute
+PE14.GPIO_PuPd=GPIO_PULLUP
 PE14.Locked=true
 PE14.PinAttribute=CortexM4
 PE14.Signal=FMC_D11_DA11
-PE15.GPIOParameters=PinAttribute
+PE15.GPIOParameters=GPIO_PuPd,PinAttribute
+PE15.GPIO_PuPd=GPIO_PULLUP
 PE15.Locked=true
 PE15.PinAttribute=CortexM4
 PE15.Signal=FMC_D12_DA12
-PE7.GPIOParameters=PinAttribute
+PE7.GPIOParameters=GPIO_PuPd,PinAttribute
+PE7.GPIO_PuPd=GPIO_PULLUP
 PE7.Locked=true
 PE7.PinAttribute=CortexM4
 PE7.Signal=FMC_D4_DA4
-PE8.GPIOParameters=PinAttribute
+PE8.GPIOParameters=GPIO_PuPd,PinAttribute
+PE8.GPIO_PuPd=GPIO_PULLUP
 PE8.Locked=true
 PE8.PinAttribute=CortexM4
 PE8.Signal=FMC_D5_DA5
-PE9.GPIOParameters=PinAttribute
+PE9.GPIOParameters=GPIO_PuPd,PinAttribute
+PE9.GPIO_PuPd=GPIO_PULLUP
 PE9.Locked=true
 PE9.PinAttribute=CortexM4
 PE9.Signal=FMC_D6_DA6
-PF0.GPIOParameters=PinAttribute
+PF0.GPIOParameters=GPIO_PuPd,PinAttribute
+PF0.GPIO_PuPd=GPIO_PULLUP
 PF0.Locked=true
 PF0.PinAttribute=CortexM4
 PF0.Signal=FMC_A0
-PF1.GPIOParameters=PinAttribute
+PF1.GPIOParameters=GPIO_PuPd,PinAttribute
+PF1.GPIO_PuPd=GPIO_PULLUP
 PF1.Locked=true
 PF1.PinAttribute=CortexM4
 PF1.Signal=FMC_A1
-PF11.GPIOParameters=PinAttribute
+PF11.GPIOParameters=GPIO_PuPd,PinAttribute
+PF11.GPIO_PuPd=GPIO_PULLUP
 PF11.Locked=true
 PF11.PinAttribute=CortexM4
 PF11.Signal=FMC_SDNRAS
-PF12.GPIOParameters=PinAttribute
+PF12.GPIOParameters=GPIO_PuPd,PinAttribute
+PF12.GPIO_PuPd=GPIO_PULLUP
 PF12.Locked=true
 PF12.PinAttribute=CortexM4
 PF12.Signal=FMC_A6
-PF13.GPIOParameters=PinAttribute
+PF13.GPIOParameters=GPIO_PuPd,PinAttribute
+PF13.GPIO_PuPd=GPIO_PULLUP
 PF13.Locked=true
 PF13.PinAttribute=CortexM4
 PF13.Signal=FMC_A7
-PF14.GPIOParameters=PinAttribute
+PF14.GPIOParameters=GPIO_PuPd,PinAttribute
+PF14.GPIO_PuPd=GPIO_PULLUP
 PF14.Locked=true
 PF14.PinAttribute=CortexM4
 PF14.Signal=FMC_A8
-PF15.GPIOParameters=PinAttribute
+PF15.GPIOParameters=GPIO_PuPd,PinAttribute
+PF15.GPIO_PuPd=GPIO_PULLUP
 PF15.Locked=true
 PF15.PinAttribute=CortexM4
 PF15.Signal=FMC_A9
-PF2.GPIOParameters=PinAttribute
+PF2.GPIOParameters=GPIO_PuPd,PinAttribute
+PF2.GPIO_PuPd=GPIO_PULLUP
 PF2.Locked=true
 PF2.PinAttribute=CortexM4
 PF2.Signal=FMC_A2
-PF3.GPIOParameters=PinAttribute
+PF3.GPIOParameters=GPIO_PuPd,PinAttribute
+PF3.GPIO_PuPd=GPIO_PULLUP
 PF3.Locked=true
 PF3.PinAttribute=CortexM4
 PF3.Signal=FMC_A3
-PF4.GPIOParameters=PinAttribute
+PF4.GPIOParameters=GPIO_PuPd,PinAttribute
+PF4.GPIO_PuPd=GPIO_PULLUP
 PF4.Locked=true
 PF4.PinAttribute=CortexM4
 PF4.Signal=FMC_A4
-PF5.GPIOParameters=PinAttribute
+PF5.GPIOParameters=GPIO_PuPd,PinAttribute
+PF5.GPIO_PuPd=GPIO_PULLUP
 PF5.Locked=true
 PF5.PinAttribute=CortexM4
 PF5.Signal=FMC_A5
-PG0.GPIOParameters=PinAttribute
+PG0.GPIOParameters=GPIO_PuPd,PinAttribute
+PG0.GPIO_PuPd=GPIO_PULLUP
 PG0.Locked=true
 PG0.PinAttribute=CortexM4
 PG0.Signal=FMC_A10
-PG1.GPIOParameters=PinAttribute
+PG1.GPIOParameters=GPIO_PuPd,PinAttribute
+PG1.GPIO_PuPd=GPIO_PULLUP
 PG1.Locked=true
 PG1.PinAttribute=CortexM4
 PG1.Signal=FMC_A11
-PG15.GPIOParameters=PinAttribute
+PG15.GPIOParameters=GPIO_PuPd,PinAttribute
+PG15.GPIO_PuPd=GPIO_PULLUP
 PG15.Locked=true
 PG15.PinAttribute=CortexM4
 PG15.Signal=FMC_SDNCAS
@@ -462,15 +495,18 @@ PG2.GPIO_Label=LCD_INT
 PG2.Locked=true
 PG2.PinAttribute=CortexM4
 PG2.Signal=GPXTI2
-PG4.GPIOParameters=PinAttribute
+PG4.GPIOParameters=GPIO_PuPd,PinAttribute
+PG4.GPIO_PuPd=GPIO_PULLUP
 PG4.Locked=true
 PG4.PinAttribute=CortexM4
 PG4.Signal=FMC_A14_BA0
-PG5.GPIOParameters=PinAttribute
+PG5.GPIOParameters=GPIO_PuPd,PinAttribute
+PG5.GPIO_PuPd=GPIO_PULLUP
 PG5.Locked=true
 PG5.PinAttribute=CortexM4
 PG5.Signal=FMC_A15_BA1
-PG8.GPIOParameters=PinAttribute
+PG8.GPIOParameters=GPIO_PuPd,PinAttribute
+PG8.GPIO_PuPd=GPIO_PULLUP
 PG8.Locked=true
 PG8.PinAttribute=CortexM4
 PG8.Signal=FMC_SDCLK
@@ -482,16 +518,19 @@ PH1-OSC_OUT\ (PH1).GPIOParameters=PinAttribute
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
 PH1-OSC_OUT\ (PH1).PinAttribute=Free
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
-PH5.GPIOParameters=PinAttribute
+PH5.GPIOParameters=GPIO_PuPd,PinAttribute
+PH5.GPIO_PuPd=GPIO_PULLUP
 PH5.Locked=true
 PH5.PinAttribute=CortexM4
 PH5.Signal=FMC_SDNWE
-PH6.GPIOParameters=PinAttribute
+PH6.GPIOParameters=GPIO_PuPd,PinAttribute
+PH6.GPIO_PuPd=GPIO_PULLUP
 PH6.Locked=true
 PH6.Mode=SdramChipSelect2_1
 PH6.PinAttribute=CortexM4
 PH6.Signal=FMC_SDNE1
-PH7.GPIOParameters=PinAttribute
+PH7.GPIOParameters=GPIO_PuPd,PinAttribute
+PH7.GPIO_PuPd=GPIO_PULLUP
 PH7.Locked=true
 PH7.Mode=SdramChipSelect2_1
 PH7.PinAttribute=CortexM4
